# training-ground

./: .gitignore  README.md  pyproject.toml  tag-bad-images.ipynb
src/training_ground/: analysis.py  coco.py  coco_eval.py  evaluation.py  evaluation_plots.py  geometry.py  main.py  metrics_plotting.py  upload.py  wizard.py
