[project]
name = "training-ground"
version = "0.1.0"
description = "Simple tool for training AI models."
readme = "README.md"
authors = [
    { name = "Tim Wedde", email = "tim@agrowizard.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
training-ground = "training_ground.main:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
