[project]
name = "training-ground"
version = "0.1.0"
description = "Simple tool for training AI models."
readme = "README.md"
authors = [
    { name = "Tim Wedde", email = "tim@agrowizard.com" }
]
requires-python = ">=3.14"
dependencies = [
    "rfdetr>=1.5.2",
    "textual>=8.1.1",
    "roboflow>=1.2.16",
]

[project.scripts]
training-ground = "training_ground.main:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
